2016-09-12  Orlando Arias  <oarias@knights.ucf.edu>

	PR target/77570
	* config/msp430/msp430.md (delay_cycles_32x): Fix pushm/popm.

2016-09-12  Marek Polacek  <polacek@redhat.com>

	* doc/extend.texi: Use lowercase "boolean".
	* doc/invoke.texi: Likewise.
	* doc/md.texi: Likewise.
	* target.def: Likewise.
	* doc/tm.texi: Regenerated.

2016-09-12  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR middle-end/77426
	* expmed.c (synth_mult): Delete duplicate mode check.

2016-09-10  Tom de Vries  <tom@codesourcery.com>

	PR C/71602
	* builtins.c (std_canonical_va_list_type): Strictly return non-null for
	va_list type only.
	* config/i386/i386.c (ix86_canonical_va_list_type): Same.
	* gimplify.c (gimplify_va_arg_expr): Handle &va_list.

2016-09-09  Peter Bergner  <bergner@vnet.ibm.com>

	PR rtl-optimization/77289
	* lra-constraints.c (get_final_hard_regno): Add support for non hard
	register numbers.  Remove support for subregs.
	(get_hard_regno): Use SUBREG_P.  Don't call get_final_hard_regno().
	(get_reg_class): Delete removed get_final_hard_regno() argument.
	(uses_hard_regs_p): Call get_final_hard_regno().

2016-09-09  Martin Sebor  <msebor@redhat.com>

	PR c/77520
	PR c/77521
	* pretty-print.c (pp_quoted_string): New function.
	(pp_format): Call it for %c and %s directives.

2016-09-10  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* doc/tm.texi.in (INITIAL_FRAME_POINTER_OFFSET): Remove.
	(ELIMINABLE_REGS, TARGET_CAN_ELIMINATE,
	INITIAL_ELIMINATION_OFFSET) : Update documentation.
	* target.def (frame_pointer_required, can_eliminate): Likewise.
	* doc/tm.texi: Regenerated.
	* builtins.c (expand_builtin_setjmp_receiver): Remove #ifdef
	ELIMINABLE_REGS.
	* df-scan.c (df_hard_reg_init): Likewise.
	* ira.c (ira_setup_eliminable_regset): Likewise.
	* lra-eliminations.c (reg_eliminate_1, (update_reg_eliminate,
	init_elim_table): Likewise.
	* reload1.c (reg_eliminate_1, verify_initial_elim_offsets,
	set_initial_elim_offsets, update_eliminables,
	init_elim_table): Likewise.